--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13502,7 +13502,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2a9715c690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f748de5c1d0&gt;</pre>
 </div>
 
 </div>
