--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@ Let's vizualize it!
 <p>An intuitive way to gauge contagiousness on campus is by looking at the new daily new cases:
 <img src="https://anishthite.github.io/gtcovid/gtdaily.png" alt="Image"></p>
 <p>It's a bit noisy so we can smooth it out. Here's a 3-day moving average, as well as a weekly tally:</p>
-<p><img src="https://anishthite.github.io/gtcovid/gtweekly.png" alt="Image">
-<img src="https://anishthite.github.io/gtcovid/gtdaily3day.png" alt="Image"></p>
+<img src="https://anishthite.github.io/gtcovid/gtweekly.png" alt="Image">
+
+<img src="https://anishthite.github.io/gtcovid/gtdaily3day.png" alt="Image">
 <h3 id="campus-impact">Campus Impact</h3>
 <p>What really matters is campus impact. We can filter out all of the non-campus impacted (the heuristic of removing all cases where "impact" is in the &quot;Campus Impact description works for now). Here are all of the above charts with the Campus Impact cases overlaid. </p>
-<p><img src="https://anishthite.github.io/gtcovid/gtdailyboth.png" alt="Image"></p>
-<p><img src="https://anishthite.github.io/gtcovid/gtweeklyboth.png" alt="Image"></p>
-<p><img src="https://anishthite.github.io/gtcovid/gtdaily3dayboth.png" alt="Image"></p>
+<img src="https://anishthite.github.io/gtcovid/gtdailyboth.png" alt="Image">
+<img src="https://anishthite.github.io/gtcovid/gtweeklyboth.png" alt="Image">
+<img src="https://anishthite.github.io/gtcovid/gtdaily3dayboth.png" alt="Image">
 <p>I'll be updating this later with more charts...
 If you have any suggestsions open an issue or send me an email at anishthite@gmail.com</p>
