--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <div class="container">
-  <div class="child" style="margin: 0 auto;">
+  <div class="child" style="font-size: 16pt; margin-left : 11%; margin-right : 11%; line-height: 1.8; float: right;">
   <h2 id="georgia-tech-coronavirus-tracking">Georgia Tech Coronavirus Tracking</h2>
   <p>So I've been following <a href="http://health.gatech.edu/coronavirus/health-alerts">http://health.gatech.edu/coronavirus/health-alerts</a> to see how safe campus is, but it's kinda hard to actually see what's going on simply from the tables.
   Let's vizualize it!
   (Note these charts are automatically updated every 12 hours)</p>
   <h3 id="new-cases">New Cases</h3>
-  <p>An intuitive way to gauge contagiousness on campus is by looking at the new daily new cases:
-  <img src="https://anishthite.github.io/gtcovid/gtdaily.png" alt="Image"></p>
+  <p>An intuitive way to gauge contagiousness on campus is by looking at the new daily new cases:</p>
+  <img src="https://anishthite.github.io/gtcovid/gtdaily.png" alt="Image">
   <p>It's a bit noisy so we can smooth it out. Here's a 3-day moving average, as well as a weekly tally:</p>
   <img src="https://anishthite.github.io/gtcovid/gtweekly.png" alt="Image">
   <br>
   <img src="https://anishthite.github.io/gtcovid/gtdaily3day.png" alt="Image">
   <h3 id="campus-impact">Campus Impact</h3>
-  <p>What really matters is campus impact. We can filter out all of the non-campus impacted (the heuristic of removing all cases where "impact" is in the &quot;Campus Impact description works for now). Here are all of the above charts with the Campus Impact cases overlaid. </p>
+  <p>What really matters is campus impact. We can filter out all of the non-campus impacted (the heuristic of removing all cases where "impact" is in the Campus Impact description works for now). Here are all of the above charts with the Campus Impact cases overlaid. </p>
   <img src="https://anishthite.github.io/gtcovid/gtdailyboth.png" alt="Image">
   <br>
   <img src="https://anishthite.github.io/gtcovid/gtweeklyboth.png" alt="Image">
