--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
   <br>
   <img src="https://anishthite.github.io/gtcovid/gtdaily3dayboth.png" alt="Image">
   <p>I'll be updating this later with more charts...
-  If you have any suggestsions open an issue or send me an email at anishthite@gmail.com</p>
+  If you have any suggestions open an issue or send me an email at anishthite@gmail.com</p>
   </div>
 </div>
