--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13515,7 +13515,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe1f1a70790&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0147c19690&gt;</pre>
 </div>
 
 </div>
