--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13515,7 +13515,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f20d9a63fd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f32b7556150&gt;</pre>
 </div>
 
 </div>
