--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13515,7 +13515,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f83b1aae710&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb3c4662110&gt;</pre>
 </div>
 
 </div>
