--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13515,7 +13515,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb29c78a490&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7effa2958490&gt;</pre>
 </div>
 
 </div>
