--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f073fdd76d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb1b8a9b150&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f073fe99490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f073fe99690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb1b8508350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb1b8508550&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0740623e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0740623fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb1b8c94c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb1b8c94e90&gt;]</pre>
 </div>
 
 </div>
