--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc1c2ab6910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa96a2159d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc1c28bd590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc1c28bd790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa96a62d490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa96a62d690&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc1c2ccadd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc1c2ccafd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa96aa30d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa96aa30f90&gt;]</pre>
 </div>
 
 </div>
