--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <h2 id="georgia-tech-coronavirus-tracking">Georgia Tech Coronavirus Tracking</h2>
   <p>So I've been following <a href="http://health.gatech.edu/coronavirus/health-alerts">http://health.gatech.edu/coronavirus/health-alerts</a> to see how safe campus is, but it's kinda hard to actually see what's going on simply from the tables.
   Let's vizualize it!
-  (Note these charts are automatically updated every 12 hours)</p>
+  (Note these charts are automatically updated every 5 min)</p>
   <h3 id="new-cases">New Cases</h3>
   <p>An intuitive way to gauge contagiousness on campus is by looking at the new daily new cases:</p>
   <img src="https://anishthite.github.io/gtcovid/gtdaily.png" alt="Image">
