--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f37430f6650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff1a7b0e790&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f37424e4490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f37424e4690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff1a75fd590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff1a790f550&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f37428f0d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f37428f0f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff1a7d47e90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff1a7d550d0&gt;]</pre>
 </div>
 
 </div>
