--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f106b6f7950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7a92ecb0d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f106b5496d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f106b5498d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a929541d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7a92cb1350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f106bce2110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f106bce2310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a930aeb90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7a930aef50&gt;]</pre>
 </div>
 
 </div>
