--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f170f782e90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc9e5e35d50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f170f78d4d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f170f78d6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc9e6024310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc9e6024510&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f170ff17dd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f170ff17fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc9e6434b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc9e6434d90&gt;]</pre>
 </div>
 
 </div>
