--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1daff76c90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7feb0b8488d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1dafd656d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1dafd658d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feb0a708610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feb0a708810&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1db0172f50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1db0180190&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feb0ae91f50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feb0aea0190&gt;]</pre>
 </div>
 
 </div>
