--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff676ce3310&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc0a190c690&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff6770ec550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff6770ec750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc0a173f4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc0a173f6d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff6774fee50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff67750c090&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc0a1b4cd90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc0a1b4cf90&gt;]</pre>
 </div>
 
 </div>
