--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fea840f7490&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2cd49f2ed0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fea8473fe90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fea844ff750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2cd48c4550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2cd48c4750&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fea844fc110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fea8490cdd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2cd504edd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2cd504efd0&gt;]</pre>
 </div>
 
 </div>
