--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8ff52993d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f59d6d7b790&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8ff510c550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8ff510c750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f59d6fee490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f59d6fee690&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8ff5897dd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8ff5897fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f59d73fdd90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f59d73fdf90&gt;]</pre>
 </div>
 
 </div>
