--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd3158d2450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fac66043110&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd3153347d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd3153349d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fac65290290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fac65290490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd315ace090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd315ace290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fac6569ebd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fac6569edd0&gt;]</pre>
 </div>
 
 </div>
