--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6ee820c310&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc8f2c13f90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ee81a8610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6ee81a8810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc8f2afd310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc8f2afd510&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ee8931f90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6ee893f1d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc8f3288cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc8f3288ed0&gt;]</pre>
 </div>
 
 </div>
