--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5236c63e90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f51e9865a90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f52366655d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f52369bb6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f51e97ff450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f51e97ff650&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5236dbdf50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5236dd4090&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f51e9f8bd10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f51e9f8bf10&gt;]</pre>
 </div>
 
 </div>
