--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6ab2343950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fde17c2fed0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ab226d450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6ab226d650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fde17140250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fde16bdb650&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ab29f7e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6ab29f7fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fde171903d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fde17366f90&gt;]</pre>
 </div>
 
 </div>
