--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f757ea1b750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcae5e79a90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f757efe36d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f757efe3910&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcae5e3b510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcae5e3b710&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f757f586f90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f757f594210&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcae63e6e90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcae63f10d0&gt;]</pre>
 </div>
 
 </div>
