--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb84f59f050&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3ea5791850&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb84f278810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb84f278a10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3ea57cb7d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3ea57cb9d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb84f82a190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb84f82a390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3ea5d87110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3ea5d87310&gt;]</pre>
 </div>
 
 </div>
