--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3ea5791850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6f1387e110&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3ea57cb7d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3ea57cb9d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6f13e47990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6f13e47b90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3ea5d87110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3ea5d87310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6f143fd1d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6f143fd3d0&gt;]</pre>
 </div>
 
 </div>
