--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f141d97b210&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f95e9855090&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f141d5de990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f141d5deb90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f95e9b2b410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f95e9e20b10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f141db90290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f141db90490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f95ea409e90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f95ea3d43d0&gt;]</pre>
 </div>
 
 </div>
